--- a/imGui_base/imGui_base.vcxproj
+++ b/imGui_base/imGui_base.vcxproj
@@ -41,13 +41,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(ProjectDir)build\$(Configuration)\Output</OutDir>
-    <IntDir>$(ProjectDir)build\$(Configuration)\Intermediate</IntDir>
+    <OutDir>$(ProjectDir)build\$(Configuration)\Output\</OutDir>
+    <IntDir>$(ProjectDir)build\$(Configuration)\Intermediate\</IntDir>
     <IncludePath>$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(ProjectDir)build\$(Configuration)\Output</OutDir>
-    <IntDir>$(ProjectDir)build\$(Configuration)\Intermediate</IntDir>
+    <OutDir>$(ProjectDir)build\$(Configuration)\Output\</OutDir>
+    <IntDir>$(ProjectDir)build\$(Configuration)\Intermediate\</IntDir>
     <IncludePath>$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -55,6 +55,8 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>libs\imgui;libs\backends</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -72,6 +74,8 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <AdditionalIncludeDirectories>libs\imgui;libs\backends</AdditionalIncludeDirectories>
       <BufferSecurityCheck>false</BufferSecurityCheck>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
